force-app/main/default/objects/Opportunity/fields/Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval__c</fullName>
    <label>Discount Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>