force-app/main/default/objects/Opportunity/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Evaluated</fullName>
                <default>true</default>
                <label>Not Evaluated</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>