force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stop my medicines?</fullName>
            </value>
            <value>
                <fullName>Fear of CGM needle</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Family approval</fullName>
            </value>
            <value>
                <fullName>Tried before</fullName>
            </value>
            <value>
                <fullName>Doctor not on board</fullName>
            </value>
            <value>
                <fullName>Diet too strict</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>