force-app/main/default/objects/Opportunity/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>EMI (card)</fullName>
            </value>
            <value>
                <fullName>No-cost EMI</fullName>
            </value>
            <value>
                <fullName>Part payment</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>