force-app/main/default/objects/Opportunity/OPP_Discount_Approved.validationRule-meta.xml
<ValidationRule>
<fullName>OPP_Discount_Approved</fullName>
<active>true</active>
<errorConditionFormula>Discount_Pct__c &gt; $CustomMetadata.Zco_Commercial_Setting__mdt.Default.Max_Discount_Without_Approval__c &amp;&amp; ISPICKVAL(StageName,'Payment Link Sent') &amp;&amp; NOT(ISPICKVAL(Discount_Approval__c,'Approved'))</errorConditionFormula>
<errorMessage>Discount above the limit needs approval.</errorMessage>
</ValidationRule>