force-app/main/default/objects/Opportunity/OPP_Eligibility_Before_Payment.validationRule-meta.xml
<ValidationRule>
<fullName>OPP_Eligibility_Before_Payment</fullName>
<active>true</active>
<errorConditionFormula>(ISPICKVAL(StageName,'Payment Link Sent') || IsWon) &amp;&amp; NOT(ISPICKVAL(Eligibility_Status__c,'Eligible') || ISPICKVAL(Eligibility_Status__c,'Cleared'))</errorConditionFormula>
<errorMessage>Payment is blocked until the patient is eligible or cleared by a doctor.</errorMessage>
</ValidationRule>